stream examples